# XPIR-iDash

./: .gitignore  CMakeLists.txt  README.md  libpir.hpp
apps/: CMakeLists.txt
apps/XPIR-hash/: CMakeLists.txt  README.md
apps/XPIR-hash/Constants/: .gitignore  CMakeLists.txt  changeParamsPIR  changeParamsPIR.cpp  changeParamsSHA  changeParamsSHA.cpp  constants.cpp  constants.hpp  makefile  paramsPIR.txt  paramsPIR.txt~
apps/XPIR-hash/Error/: Error.hpp
apps/XPIR-hash/PIRClient/: .gitignore  CMakeLists.txt  CMakeLists.txt~  PIRClient.cpp  PIRClient.hpp  client.cpp  makefile  output.txt
apps/XPIR-hash/PIRClient/AES/: AES_256.cpp  AES_256.hpp  AES_cbc_256.cpp
apps/XPIR-hash/PIRClient/AES256/: AES_ctr_256.cpp  AES_ctr_256.hpp
apps/XPIR-hash/PIRClient/Parallel/: PIRClientParallel.cpp  PIRClientParallel.hpp
apps/XPIR-hash/PIRClient/Pipeline/: PIRClientPipeline.cpp  PIRClientPipeline.hpp
apps/XPIR-hash/PIRClient/SHA256/: .gitignore  SHA_256.cpp  SHA_256.hpp  SHA_256_example  SHA_256_example.cpp  makefile
apps/XPIR-hash/PIRClient/Sequential/: PIRClientSequential.cpp  PIRClientSequential.hpp
apps/XPIR-hash/PIRClient/logs/: log_1000.txt  log_10000.txt  log_100000.txt  output.txt
apps/XPIR-hash/PIRClient/simplePIR/: makefile
apps/XPIR-hash/PIRServer/: .gitignore  CMakeLists.txt  PIRServer.cpp  PIRServer.hpp  makefile  server.cpp
apps/XPIR-hash/PIRServer/Parallel/: PIRServerParallel.cpp  PIRServerParallel.hpp
apps/XPIR-hash/PIRServer/Pipeline/: PIRServerPipeline.cpp  PIRServerPipeline.hpp
apps/XPIR-hash/PIRServer/Sequential/: PIRServerSequential.cpp  PIRServerSequential.hpp
apps/XPIR-hash/PIRServer/db/: 1  10  100  1000  1001  1002  1003  1004  1005  1006  1009  101  1010  1011  1013  1015  1016  1017  1018  1019  1020  1021  1022  1023  1024  1027  1028  1029  103  1030  1031  1033  1034  1036  1037  1038  104  1040  1041  1042  (+5736 more)
apps/XPIR-hash/Socket/: Socket.cpp  Socket.hpp
apps/XPIR-hash/Tests/: .gitignore  CMakeLists.txt  changeParamsPIR  changeParamsSHA  changeParamsSHA.cpp  checkExecution  checkExecution.cpp  makefile  simple_test.sh
apps/XPIR-hash/Tools/: Tools.cpp  Tools.hpp
apps/XPIR-hash/XPIR/: .gitignore  XPIRc.cpp  XPIRc.hpp  makefile  simplePIR.cpp
apps/XPIR-hash/XPIR/Parallel/: XPIRcParallel.cpp  XPIRcParallel.hpp
apps/XPIR-hash/XPIR/Pipeline/: XPIRcPipeline.cpp  XPIRcPipeline.hpp
apps/XPIR-hash/XPIR/Sequential/: XPIRcSequential.cpp  XPIRcSequential.hpp
crypto/: Bitsplit.cpp  Bitsplit.hpp  CMakeLists.txt  FV2048_124.cpp  FV2048_124.cpp~  FV2048_124.hpp  (+22 more)
(+77 files in other folders)
